--- a/wp-content/themes/zocdoc-careers/src/styl/viewport/922/pages/blog/article/parts/_article-body.styl
+++ b/wp-content/themes/zocdoc-careers/src/styl/viewport/922/pages/blog/article/parts/_article-body.styl
@@ -36,7 +36,10 @@
         }
 
         a {
-          fontsize-18-medium()
+          // fontsize-18()
+              ont-family: 'kievit-slab-pro-book';
+              font-size 1.8rem
+              line-height 2.3rem
         }
 
         strong {
